Fixed bug #48912 (Namespace causes unexpected strict behaviour with extract())

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/branches/PHP_5_3@286452 c90b9560-bf6c-de11-be94-00142212c4b1